tests/lang/compile_fail/spawn_bare_fn_error.koja
fn worker
  receive
    msg -> msg.print()
  end
end

fn main
  spawn worker
end
